# livejournal-playwright-python

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conftest.py  pyproject.toml  run.sh
pages/: base_page.py  login_page.py  post_editor_page.py
src/: config.py  data_factory.py  localization.py
tests/: test_publish_entry.py
