[project]
name = "livejournal-playwright"
version = "0.1.0"
description = "LiveJournal E2E — Python · Playwright · pytest"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3",
    "playwright>=1.49",
    "pytest-playwright>=0.6",
    "faker>=33.1",
    "allure-pytest>=2.13",
    "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "smoke: smoke tests",
    "e2e: end-to-end tests",
]
